--- a/tech-project/index.html
+++ b/tech-project/index.html
@@ -74,7 +74,7 @@
   <dl>
   </dl>
   <div class="description"><video width="500" height="500" autoplay loop>
-  <source src="../tech-project/Islands.mp4" type="video/mp4" />
+  <source src="../tech-project/islands.mp4" type="video/mp4" />
   Your browser does not support the video tag.
 </video><p>A terrain generator/destroyer written in Java, using the <a href="https://en.wikipedia.org/wiki/Diamond-square_algorithm">Diamond-Square</a> algorithm. Currently features several choices of landscape (alpine, desert, arctic, plains, islands, himalaya) along with destructible towns and trees.  A custom algorithm is used generate the towns and place them on favorable parts of the map.</p>
 <p>The beta version was submitted as a final project for my CS015 class, but it's still a work in progress. <a href="https://github.com/3goliad/diamond">Collaborating with Javier Maldonado</a> to reimplement it in C++ with OpenFrameworks instead of JavaFX, and a graph/node based structure instead of a grid. Planned features include rivers, roads, terrain deformation, and multiple biomes in one map.</p>
