--- a/amema/index.html
+++ b/amema/index.html
@@ -2,26 +2,27 @@
 <meta charset="utf-8">
 <link rel="stylesheet" href="../static/style.css">
 <link href="https://fonts.googleapis.com/css?family=Istok+Web:400i,700" rel="stylesheet">
-
+<link href="https://fonts.googleapis.com/css?family=Roboto:400,400i" rel="stylesheet">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="description" content="Zak Ziebell is an artist and programmer studying at Brown University and the Rhode Island School of Design.">
 <script src="https://use.fontawesome.com/9404b4f96f.js"></script>
-<title>Amema (2015) — Zak Ziebell</title>
+<title>Amema (2015) Zak Ziebell</title>
 <body>
 
   <header>
     <h1><a href="../">Zak Ziebell</a></li></h1>
-    <a href="https://github.com/zaaakk">
-    <i class="fa fa-github" aria-hidden="true"></i>
-    </a>
-    <a href="https://www.instagram.com/zaaakk/">
-    <i class="fa fa-instagram" aria-hidden="true"></i>
-    </a>
-    <a href="mailto:zziebell@risd.edu"><i class="fa fa-envelope" aria-hidden="true"></i></a>
     <div id="info">
+      <a href="https://github.com/zaaakk">
+        <i class="fa fa-github" aria-hidden="true"></i>
+      </a>
+      <a href="https://www.instagram.com/zaaakk/">
+        <i class="fa fa-instagram" aria-hidden="true"></i>
+      </a>
+      <a href="mailto:zziebell@risd.edu"><i class="fa fa-envelope" aria-hidden="true"></i></a>
       <h3>Bio</h3>
       <p>20 years old. Studying painting, computer science, and philosophy at Brown University and the Rhode Island School of Design.
       Interested in landscapes, interfaces, and history.</p>
-      <h3>Collaborative Projects I've worked on</h3>
+      <h3>Collaborative Projects</h3>
       <nav>
       <ul class="nav">
         <li><a  target="_blank" href="https://github.com/Brown-University-Library/usepweb_project">U.S. Epigraphy Project</a></li>
