--- a/examples/necklace.html
+++ b/examples/necklace.html
@@ -13,6 +13,12 @@ position:absolute; z-index:-5; top:0; left:0; width:100vw; height:100vh;
   background-repeat: no-repeat;
   background-size: cover;
 }
+
+p {
+	color:white;
+	text-shadow: 1px 0 0 #000, 0 -1px 0 #000, 0 1px 0 #000, -1px 0 0 #000;
+	z-index:99;
+}
 </style>
 </head>
 <body>
@@ -284,7 +290,12 @@ function computeBoundingSphere( object3d ) {
 </script>
 
 <div style="background-image: url('shepherd_1.jpg')"
-id="shepherd_1" class="bg"></div>
+id="shepherd_1" class="bg">
+	<p><i>went into the underworld on a mission of salvation</i></p>
+	<p>+10 luck<p> 
+	<p>+5 affinity to animals </p>
+	<p>+3 musicality</p>
+</div>
 
 <div style="background-image: url('apple.jpeg')"
 id="apple" class="bg">
