--- a/examples/necklace.html
+++ b/examples/necklace.html
@@ -17,7 +17,7 @@ position:absolute; z-index:-1; top:0; left:0; width:100vw; height:100vh;
 .extra {
 
 	display:none;
-position:absolute; z-index:99; bottom:50px; left:0; width:100vw; height:100vh; 
+position:absolute; z-index:99; top:0; left:0; width:100vw; height:100vh; 
 }
 
 p {
