--- a/examples/necklace.html
+++ b/examples/necklace.html
@@ -7,6 +7,13 @@
 <link rel="stylesheet" href="./style.css">
 
 <style>
+
+@font-face {
+    font-family: Alcohole;
+    src: url(Alcohole.ttf);
+}
+
+
 .bg {
 display:none;
 position:absolute; z-index:-1; top:0; left:0; width:100vw; height:100vh; 
@@ -15,18 +22,21 @@ position:absolute; z-index:-1; top:0; left:0; width:100vw; height:100vh;
 }
 
 .extra {
-
+	font-family: Alcohole;
 	display:none;
 position:absolute; z-index:99; top:0; left:0; width:100vw; height:100vh; 
 }
 
 p {
-	color:white;
+	      mix-blend-mode: exclusion;
+		font-family: Alcohole;
+	color:gray;
 	text-shadow: 1px 0 0 #000, 0 -1px 0 #000, 0 1px 0 #000, -1px 0 0 #000;
-	font-size:28px;
+	font-size:18px;
 }
 
 body > canvas {
+
 
 	position:relative;
 	height:100vh;
@@ -186,6 +196,8 @@ scene.updateMatrixWorld();
 
 					
 						$(".bg").fadeOut();	
+						$(".extra").fadeOut();	
+
 
 
 						INTERSECTED_click = intersects_click[ 0 ].object;
@@ -331,7 +343,7 @@ id="apple" class="bg">
 id="snake_1" class="bg">
 </div>
 
-<div style="position:absolute; bottom:5px; left:10px; font-size:64px; color:gray;"
+<div style="position:absolute; text-shadow: 1px 0 0 #000, 0 -1px 0 #000, 0 1px 0 #000, -1px 0 0 #000; bottom:5px; left:10px; font-size:64px; color:gray;"
 
 id="caption">
 
