--- a/examples/necklace.html
+++ b/examples/necklace.html
@@ -10,7 +10,7 @@
 
 @font-face {
     font-family: Alcohole;
-    src: url(Alcohole.ttf);
+    src: url(Mousedrawn.otf);
 }
 
 
@@ -30,7 +30,7 @@ position:absolute; z-index:99; top:0; left:0; width:100vw; height:100vh;
 p {
 	      mix-blend-mode: exclusion;
 		font-family: Alcohole;
-	color:gray;
+	color:#c5b1ff;
 	text-shadow: 1px 0 0 #000, 0 -1px 0 #000, 0 1px 0 #000, -1px 0 0 #000;
 	font-size:18px;
 }
@@ -38,7 +38,6 @@ p {
 body > canvas {
 
 
-	position:relative;
 	height:100vh;
 	width:100vw;
 	z-index:0;
@@ -329,10 +328,14 @@ id="shepherd_1" class="bg">
 <div class="extra" id="shepherd_12">
 
 	<p><i>went into the underworld on a mission of salvation</i></p>
+
+	<div style="float:right">
 	<p>+10 luck<p> 
 	<p>+5 affinity to animals </p>
 	<p>+3 musicality</p>
+</p>
 
+<img src=""
 </div>
 
 <div style="background-image: url('apple.jpeg')"
