--- a/examples/necklace.html
+++ b/examples/necklace.html
@@ -14,7 +14,18 @@
 }
 
 
+
+@font-face {
+    font-family: bob;
+    src: url(bob.ttf);
+}
+
+#caption {
+	font-family: bob;
+}
+
 .bg {
+
 display:none;
 position:absolute; z-index:-1; top:0; left:0; width:100vw; height:100vh; 
   background-repeat: no-repeat;
@@ -28,6 +39,7 @@ position:absolute; z-index:99; top:0; left:0; width:100vw; height:100vh;
 }
 
 p {
+	padding:5px;
 	      mix-blend-mode: exclusion;
 		font-family: Alcohole;
 	color:#c5b1ff;
@@ -334,9 +346,10 @@ id="shepherd_1" class="bg">
 	<p>+5 affinity to animals </p>
 	<p>+3 musicality</p>
 </p>
-
-<img src=""
 </div>
+<img src="img.png" style="width:120px;padding:5px;">
+</div>
+
 
 <div style="background-image: url('apple.jpeg')"
 id="apple" class="bg">
