--- a/examples/necklace.html
+++ b/examples/necklace.html
@@ -42,9 +42,10 @@ p {
 	padding:5px;
 	      mix-blend-mode: exclusion;
 		font-family: Alcohole;
-	color:#c5b1ff;
+		color:#cccccc;
 	text-shadow: 1px 0 0 #000, 0 -1px 0 #000, 0 1px 0 #000, -1px 0 0 #000;
 	font-size:18px;
+	text-align:center;
 }
 
 body > canvas {
@@ -103,7 +104,7 @@ scene.add(
 
 raycaster = new THREE.Raycaster();
 
-new THREE.GLTFLoader().load( './xmas.glb', function ( gltf ) {
+new THREE.GLTFLoader().load( './xmas2.glb', function ( gltf ) {
 
 	gltf.scene.scale.set(.1, .1, .1);
 
@@ -341,25 +342,96 @@ id="shepherd_1" class="bg">
 
 	<p><i>went into the underworld on a mission of salvation</i></p>
 
-	<div style="float:right">
-	<p>+10 luck<p> 
-	<p>+5 affinity to animals </p>
-	<p>+3 musicality</p>
-</p>
-</div>
-<img src="img.png" style="width:120px;padding:5px;">
+
 </div>
 
 
 <div style="background-image: url('apple.jpeg')"
 id="apple" class="bg">
+
+</div>
+
+<div class="extra" id="apple2">
+
+	<p><i>looks tasty...</i></p>
+
+
 </div>
 
 <div style="background-image: url('snake.jpeg')"
 id="snake_1" class="bg">
 </div>
 
-<div style="position:absolute; text-shadow: 1px 0 0 #000, 0 -1px 0 #000, 0 1px 0 #000, -1px 0 0 #000; bottom:5px; left:10px; font-size:64px; color:gray;"
+
+<div class="extra" id="snake_12">
+
+	<p><i>a snake fossilized mid-strike</i></p>
+
+
+</div>
+
+
+
+<div style="background-image: url('chain1.jpeg')"
+id="chain_1" class="bg">
+</div>
+
+
+<div class="extra" id="chain_12">
+
+	<p><i>half-endtombed by a rock slide</i></p>
+
+
+</div>
+
+<div style="background-image: url('horse.jpeg')"
+id="horse" class="bg">
+</div>
+
+
+<div class="extra" id="horse2">
+
+	<p><i>half-endtombed by a rock slide</i></p>
+
+
+</div>
+
+
+<div style="background-image: url('horse001.jpg')"
+id="horse001" class="bg">
+</div>
+
+
+<div class="extra" id="horse0012">
+
+	<p><i>half-endtombed by a rock slide</i></p>
+
+
+</div>
+
+<div style="background-image: url('odd.jpg')"
+id="chain" class="bg">
+</div>
+
+<div style="background-image: url('odd.jpg')"
+id="chain_2" class="bg">
+</div>
+
+
+<div style="background-image: url('odd.jpg')"
+id="chain_3" class="bg">
+</div>
+
+
+<div style="background-image: url('odd.jpg')"
+id="chain_4" class="bg">
+</div>
+
+<div style="background-image: url('odd.jpg')"
+id="chain_5" class="bg">
+</div>
+
+<div style="position:absolute; text-shadow: 1px 0 0 #000, 0 -1px 0 #000, 0 1px 0 #000, -1px 0 0 #000; bottom:5px; left:10px; font-size:34px; 	color:#cccccc;"
 
 id="caption">
 
