--- a/examples/necklace.html
+++ b/examples/necklace.html
@@ -424,6 +424,15 @@ id="caption">
 
 </div>
 
+		<div id="info">
+	"SHEPHERD NECKLACE"
+	<br>
+	Necklace Characteristics:
+	<br>
+	<i>holy aura, kinship to animals</i>
+		<br>
+		<i>purity, reflectiveness</i>
+		</div>
 	
 </body>
 </html>
