--- a/examples/devilchain.html
+++ b/examples/devilchain.html
@@ -496,6 +496,79 @@ id="devilmancroped014" class="bg">
 
 </div>
 
+<div style="background-image: url('devilmancroped8.jpg')"
+id="devilmancroped015" class="bg">
+</div>
+
+
+<div class="extra" id="devilmancroped0152">
+
+	<p><i>an image of the devil, from the 15th circle of hell.</i></p>
+
+
+</div>
+
+
+<div style="background-image: url('devilmancroped10.png')"
+id="devilmancroped020" class="bg">
+</div>
+
+
+<div class="extra" id="devilmancroped0202">
+
+	<p><i>an image of the devil, from the 20th circle of hell.</i></p>
+
+
+</div>
+
+<div style="background-image: url('devilmancroped11.jpg')"
+id="devilmancroped011" class="bg">
+</div>
+
+
+<div class="extra" id="devilmancroped0112">
+
+	<p><i>an image of the devil, from the 11th circle of hell.</i></p>
+
+
+</div>
+
+<div style="background-image: url('devilmancroped12.png')"
+id="devilmancroped010" class="bg">
+</div>
+
+
+<div class="extra" id="devilmancroped0102">
+
+	<p><i>an image of the devil, from the 10th circle of hell.</i></p>
+
+
+</div>
+
+<div style="background-image: url('devilmancroped13.jpg)"
+id="devilmancroped009" class="bg">
+</div>
+
+
+<div class="extra" id="devilmancroped0092">
+
+	<p><i>an image of the devil, from the 9th circle of hell.</i></p>
+
+
+</div>
+
+<div style="background-image: url('devilmancroped14.jpg)"
+id="devilmancroped016" class="bg">
+</div>
+
+
+<div class="extra" id="devilmancroped0162">
+
+	<p><i>an image of the devil, from the 16th circle of hell.</i></p>
+
+
+</div>
+
 004
 005
 014
