--- a/examples/devilchain.html
+++ b/examples/devilchain.html
@@ -545,7 +545,7 @@ id="devilmancroped010" class="bg">
 
 </div>
 
-<div style="background-image: url('devilmancroped13.jpg)"
+<div style="background-image: url('devilmancroped13copy.jpeg')"
 id="devilmancroped009" class="bg">
 </div>
 
@@ -557,7 +557,7 @@ id="devilmancroped009" class="bg">
 
 </div>
 
-<div style="background-image: url('devilmancroped14.jpg)"
+<div style="background-image: url('devilmancroped14copy.jpeg')"
 id="devilmancroped016" class="bg">
 </div>
 
