--- a/examples/devilchain.html
+++ b/examples/devilchain.html
@@ -484,7 +484,7 @@ id="devilmancroped005" class="bg">
 
 </div>
 
-<div style="background-image: url('devilmancroped7.jpg')"
+<div style="background-image: url('devilmancroped7.jpeg')"
 id="devilmancroped014" class="bg">
 </div>
 
@@ -565,6 +565,18 @@ id="devilmancroped016" class="bg">
 <div class="extra" id="devilmancroped0162">
 
 	<p><i>an image of the devil, from the 16th circle of hell.</i></p>
+
+
+</div>
+
+<div style="background-image: url('devilman17.png')"
+id="devilmancroped017" class="bg">
+</div>
+
+
+<div class="extra" id="devilmancroped0172">
+
+	<p><i>an image of the devil, from the 17th circle of hell.</i></p>
 
 
 </div>
